--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Victor Michael</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- boxicons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
         <a href="#" class="logo">Victor</a>
+
+        <div class="bx bx-menu" id="menu-icon"></div>
+
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
@@ -19,6 +25,21 @@
         </nav>
     </header>
 
+    <!-- section design-->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h1>Hi, I'm <span>Victor Michael</span></h1>
+            <div class="text-animate">
+                <h3>FrontEnd Developer</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatem distinctio esse in laudantium, ex possimus nesciunt, dolorum asperiores inventore fugit reiciendis facilis modi architecto nobis blanditiis!</p>
+            <div class="btn-box">
+                <a href="#" class="btn">Hire me</a>
+                <a href="#" class="btn">Let's Talk</a>
+            </div>
+        </div>
+    </section>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
