--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
                 <a href="#" class="btn">Let's Talk</a>
             </div>
         </div>
+
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-facebook' ></i></a>
+        </div>
+
+        <div class="home-imgHover">
+            Hello 
+        </div>
     </section>
     
     <script src="js/script.js"></script>
